Actions
Bug #6362
closedin.ndpd: SIOCLIFGETND: missing newline
Start date:
2015-10-20
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
in.ndpd(1557): SIOCLIFGETND debug message missing newline
Updated by Electric Monk almost 7 years ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit ddadf64dec36f9cae0ff7ed9384ec87f855af450
commit ddadf64dec36f9cae0ff7ed9384ec87f855af450 Author: Janne Savikko <janne.savikko@aalto.fi> Date: 2015-10-20T15:10:43.000Z 6362 in.ndpd: SIOCLIFGETND: missing newline Reviewed by: Lauri Tirkkonen <lotheac@iki.fi> Approved by: Robert Mustacchi <rm@joyent.com>
Actions