6362 in.ndpd: SIOCLIFGETND: missing newline Reviewed by: Lauri Tirkkonen <lotheac@iki.fi> Approved by: Robert Mustacchi <rm@joyent.com>